# RAG

./: .coverage  .gitignore  README.md  pyproject.toml
interface/: app.py
interface/adapters/: faiss_store.py  mistral_client.py
interface/core/: config.py
interface/ports/: llm.py  vector_store.py
interface/services/: intent_classifier.py  prompting.py  rag_chat.py
interface/ui/: chat_page.py
src/: __init__.py
src/rag/: __init__.py
src/rag/adapters/: __init__.py
src/rag/adapters/cli/: app.py  compare_documents.py  convert_all_documentation.py  evaluate_rag_answers.py  evaluation_rag_answers.py  indexation_documentation.py  model_evaluation.py
src/rag/adapters/ui/: app.py  chat_page.py
src/rag/application/: __init__.py
src/rag/application/ports/: chunkers.py  converters.py  embedders.py  evaluater.py  evaluation.py  evaluation_storage.py  evaluator.py  indexer.py  llm.py  reranker.py  retriever.py  (+2 more)
src/rag/infrastructure/: __init__.py
src/rag/utils/: logging_builder.py  utils.py
tests/adapters/cli/: test_compare_documents.py
tests/application/use_cases/: test_document_conversion.py  test_document_index_comparator.py  test_document_pipeline_comparator.py  test_documents_indexer.py
tests/infrastructure/chunking/: test_markdown_tag_chunker.py  test_recursive_chunker.py  test_semantic_chunker.py
tests/infrastructure/config/: test_config.py  test_types.py
tests/infrastructure/converters/: test_converters.py  test_default_exporter.py  test_default_ocr_service.py
utils/: chunkers.py  converters.py  embedders.py  indexer.py  logger.py
(+49 files in other folders)
