[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "docling>=2.60.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "flake8>=7.3.0",
    "langchain-text-splitters>=1.0.0",
    "mistralai>=1.9.11",
    "numpy>=2.3.4",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
]
